--- a/src/main/webapp/js/workbench/linking-and-fusing/fagi-gis.html
+++ b/src/main/webapp/js/workbench/linking-and-fusing/fagi-gis.html
@@ -52,7 +52,7 @@
     </div>
     <br/>
 
-     <div class="row">
+<!--      <div class="row">
       <div class="col-xs-2">
         <label for="Database">Database</label>
       </div>
@@ -63,7 +63,7 @@
       </div>
     </div>
     <br/> 
-
+ -->
     <div class="row">
       <div class="col-xs-2">
         <label for="Endpoint">Target Endpoint</label>  
