add menu simulation

--- a/src/main/webapp/js/workbench/simulation/data-simulator.html
+++ b/src/main/webapp/js/workbench/simulation/data-simulator.html
@@ -2,6 +2,11 @@
 
   <component-header></component-header>
 
+  <h4>Status</h4>
+
+  
+
+	<h4>New Simulation</h4>
   <form class="form-horizontal InputForm" role="form" name="simulatorForm" novalidate>
   	
 		<div class="form-group">
