--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>GeoKnow Generator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="" />
-  <meta name="author" content="GeoKnow EU project FP7" />
+  <meta name="description" content="GeoKnow Generator EU project FP7" />
+  <meta name="author" content="Ontos AG" />
 
   <!-- Le styles -->
   <link href="lib/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" />
@@ -142,19 +142,24 @@
   <script src="lib/bootstrap-slider/bootstrap-slider.js"></script>
   <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.11.2.min.js"></script>
 
-  <!-- Misc -->
-  <script src="lib/ng-file-upload/4.0.0/ng-file-upload-shim.min.js"></script> 
-  <script src="lib/ng-file-upload/4.0.0/ng-file-upload.min.js"></script> 
+  <!-- Angular Misc -->
+  <script src="lib/ng-file-upload/9.0.0/ng-file-upload-shim.min.js"></script> 
+  <script src="lib/ng-file-upload/9.0.0/ng-file-upload.min.js"></script> 
   <script src="lib/http-auth-interceptor.js"></script>
   <script src="lib/xml2json.min.js"></script>
   <script src="lib/angular-flash/angular-flash.min.js"></script>
   <script src="lib/angular-loading-bar/loading-bar.js"></script>
-<!-- 
-  <script src="lib/angular-file-upload-master/2.1.1/angular-file-upload-shim.min.js"></script>
-  <script src="lib/angular-file-upload-master/2.1.1/angular-file-upload.min.js"></script>
-  <script src="lib/angular-file-upload-master/2.1.1/FileAPI.min.js"></script>
- -->
- 
+
+  <!-- RDF parser for DEER -->
+  <script src="lib/rdf/Builtins.js"></script>
+  <script src="lib/rdf/Default.js"></script>
+  <script src="lib/rdf/Graph.js"></script>
+  <script src="lib/rdf/Profile.js"></script>
+  <script src="lib/rdf/rdf.js"></script>
+  <script src="lib/rdf/RDFEnvironment.js"></script>
+  <script src="lib/rdf/RDFNode.js"></script>
+  <script src="lib/rdf/TurtleParser.js"></script>
+
   <!-- services for the different modules/pages -->
   <script src="js/app.js"></script>
   <script src="js/services/config.js"></script>
