--- a/src/main/webapp/js/workbench/simulation/data-simulator.html
+++ b/src/main/webapp/js/workbench/simulation/data-simulator.html
@@ -2,13 +2,15 @@
 
   <component-header></component-header>
 
-  <h4>Status</h4>
+  <h4>Simulation</h4>
 
-  
-
-	<h4>New Simulation</h4>
   <form class="form-horizontal InputForm" role="form" name="simulatorForm" novalidate>
   	
+		<div class="form-group">
+      <label class="col-xs-2 control-label" >Status</label>
+      <div class="col-xs-8">{{simulation.status}}</div>
+    </div>
+
 		<div class="form-group">
       <label for="startDate" class="col-xs-2 control-label" >Start date</label>
       <div class="col-xs-8">
@@ -25,7 +27,6 @@
     			<span ng-show="simulatorForm.start.$error.required"> Missing start date</span>
       	</div>
     	</div>
-    	
     </div>
 
 
@@ -47,25 +48,31 @@
     	</div>
     </div>
 
+		<div class="form-group">
+			<label for="interval" class="col-xs-2 control-label">Interval</label>
+      <div class="col-xs-8">
+        <input type="text" class="form-control" id="interval" disabled="disabled" ng-model="simulation.interval" required></input>
+      </div>
+    </div>
+
     <source-graph source-changed="updateProductsList()"></source-graph>
 
 		<div class="form-group" ng-show="source.graph!=''">
 			<div class="col-sm-2"></div>
 			<div class="col-sm-8">
-		  	<select id="products" name="products" class="form-control" ng-model="simulation.productUri" ng-options="c.label for c in products" required></select>
+		  	<select id="products" name="products" class="form-control" ng-model="simulation.productUri" ng-options="c.label for c in products" ng-change="updateManufacturerList()" required></select>
 	  	</div>
 		</div>
 
+		<div class="form-group" ng-show="simulation.productUri!=''">
+      <label class="col-xs-2 control-label" >News about</label>
+      <div class="col-xs-8">
+      	<ul><li ng-repeat="m in manufacturer" >{{m}}</li></ul>
+			</div>
+    </div>
+
 		<target-graph></target-graph>
 
-		<div class="form-group">
-			<div class="col-xs-2">
-        <label for="interval">Interval</label>  
-      </div>
-      <div class="col-xs-8">
-        <input type="text" class="form-control" id="interval" disabled="disabled" ng-model="simulation.interval" required></input>
-      </div>
-    </div>
 
   	<div class="form-group">
 			<div class="col-sm-2"></div>
