--- a/src/main/webapp/js/workbench/search-querying-and-exploration/virtuoso.html
+++ b/src/main/webapp/js/workbench/search-querying-and-exploration/virtuoso.html
@@ -14,7 +14,7 @@
     </div>
 
 
-    <source-graph source-changed="updateServiceParams()"></source-graph>
+    <source-graph graph-info="source" has-changed="updateServiceParams()"></source-graph>
 
 
     <div class="form-group">
