--- a/src/main/webapp/js/workbench/extraction-and-loading/import-rdf.html
+++ b/src/main/webapp/js/workbench/extraction-and-loading/import-rdf.html
@@ -23,13 +23,13 @@
 				<div class="error">{{uploadMessageError}}</div>
 				<br>
 				<ul ng-show="uploadSuceed()">
-					<li ng-repeat="f in importRdf.source">{{f}}</li>
+					<li ng-repeat="f in importRdf.files">{{f}}</li>
 				</ul>
 
 			</div>
 	  </div>
 
-	  <target-graph></target-graph>
+	  <target-graph graph-info="target"></target-graph>
 
 	  <div class="form-group">
 	  	<div class="col-sm-2"></div>
@@ -53,7 +53,7 @@
        	</div>
       </div>
 	  </div>
-	  <target-graph></target-graph>
+	  <target-graph graph-info="target"></target-graph>
 
 	  <div class="form-group">
 	  	<div class="col-sm-2"></div>
@@ -84,7 +84,7 @@
       </div>
 	  </div>
 
-	  <target-graph></target-graph>
+	  <target-graph graph-info="target"></target-graph>
 
 	  <div class="form-group">
 			<div class="col-sm-2"></div>
@@ -99,8 +99,8 @@
 	<!-- Import from LOCAL sparql  -->
 	<form ng-show="localQueryElements" class="form-horizontal InputForm" role="form" name="localForm" novalidate>
 		
-		<source-graph source-changed="updateNewTargetInfo()"></source-graph>
-		<target-graph></target-graph>
+		<source-graph graph-info="source" has-changed="updateNewTargetInfo()"></source-graph>
+		<target-graph graph-info="target"></target-graph>
 
 		<div class="form-group">
 			<div class="col-sm-2"></div>
