--- a/src/main/webapp/js/workbench/search-querying-and-exploration/facete.html
+++ b/src/main/webapp/js/workbench/search-querying-and-exploration/facete.html
@@ -10,7 +10,7 @@
     </div>
 
 
-    <source-graph ng-show="isLocalEndpoint()"></source-graph>
+    <source-graph graph-info="source" ng-show="isLocalEndpoint()"></source-graph>
 
     <div class="form-group">
       <div class="col-sm-2"></div>
