--- a/src/main/webapp/modal-forms/workbench/modal-limes-job.html
+++ b/src/main/webapp/modal-forms/workbench/modal-limes-job.html
@@ -27,7 +27,7 @@
         </div>
       </div>
 
-      <target-graph></target-graph>
+      <target-graph graph-info="target"></target-graph>
          
   </div>
   <div class="modal-footer">
