--- a/src/main/webapp/js/workbench/linking-and-fusing/limes.html
+++ b/src/main/webapp/js/workbench/linking-and-fusing/limes.html
@@ -200,7 +200,7 @@
         </div>
       </div>
       <br>
-      <div class="row">
+<!--       <div class="row">
         <div class="col-xs-2">
           <label for="OutputFormat">Output Format</label>
         </div>
@@ -209,7 +209,7 @@
             ng-options="option for option in options.output"></select>
         </div>
       </div>
-      <br>
+      <br> -->
       <div class="row">
         <div class="col-xs-2">
           <label for="ExecType">Execution (Optional)</label>
