--- a/src/main/webapp/js/workbench/simulation/data-simulator.html
+++ b/src/main/webapp/js/workbench/simulation/data-simulator.html
@@ -7,8 +7,23 @@
   <form class="form-horizontal InputForm" role="form" name="simulatorForm" novalidate>
   	
 		<div class="form-group">
-      <label class="col-xs-2 control-label" >Status</label>
-      <div class="col-xs-8">{{simulation.status}}</div>
+      <label class="col-xs-2 control-label" >News Extractor Status</label>
+      <ul class="col-xs-2 list-group">
+        <li class="list-group-item list-group-item-info">None</li>
+        <!-- <li class="list-group-item list-group-item-success">Cras sit amet nibh libero</li>
+        <li class="list-group-item list-group-item-warning">Porta ac consectetur ac</li>
+        <li class="list-group-item list-group-item-danger">Vestibulum at eros</li> -->
+      </ul>      
+    </div>
+
+    <div class="form-group">
+      <label class="col-xs-2 control-label" >Data Simulator Status</label>
+      <ul class="col-xs-2 list-group">
+        <li class="list-group-item list-group-item-info">None</li>
+        <!-- <li class="list-group-item list-group-item-success">Cras sit amet nibh libero</li>
+        <li class="list-group-item list-group-item-warning">Porta ac consectetur ac</li>
+        <li class="list-group-item list-group-item-danger">Vestibulum at eros</li> -->
+      </ul>
     </div>
 
 		<div class="form-group">
