--- a/src/main/webapp/js/settings/data-sources/data-sources.html
+++ b/src/main/webapp/js/settings/data-sources/data-sources.html
@@ -25,8 +25,8 @@
       </td>
       <td>{{endpoint.uri}}</td>
       <td>{{endpoint.label}}</td>
-      <td>{{endpoint.endpoint}}</td>
-      <td>{{endpoint.homepage}}</td>
+      <td><a href="{{endpoint.endpoint}}" target="_blanc">{{endpoint.endpoint}}</a></td>
+      <td><a href="{{endpoint.homepage}}" target="_blanc">{{endpoint.homepage}}</a></td>
     </tr>
   </tbody>
   </table>
