--- a/src/main/webapp/js/workbench/simulation/data-simulator.html
+++ b/src/main/webapp/js/workbench/simulation/data-simulator.html
@@ -8,22 +8,12 @@
   	
 		<div class="form-group">
       <label class="col-xs-2 control-label" >News Extractor Status</label>
-      <ul class="col-xs-2 list-group">
-        <li class="list-group-item list-group-item-info">None</li>
-        <!-- <li class="list-group-item list-group-item-success">Cras sit amet nibh libero</li>
-        <li class="list-group-item list-group-item-warning">Porta ac consectetur ac</li>
-        <li class="list-group-item list-group-item-danger">Vestibulum at eros</li> -->
-      </ul>      
+      <div class="col-xs-4">{{simulation.status}}</div>
     </div>
 
     <div class="form-group">
       <label class="col-xs-2 control-label" >Data Simulator Status</label>
-      <ul class="col-xs-2 list-group">
-        <li class="list-group-item list-group-item-info">None</li>
-        <!-- <li class="list-group-item list-group-item-success">Cras sit amet nibh libero</li>
-        <li class="list-group-item list-group-item-warning">Porta ac consectetur ac</li>
-        <li class="list-group-item list-group-item-danger">Vestibulum at eros</li> -->
-      </ul>
+      <div class="col-xs-4">{{newsExtraction.status}}</div>
     </div>
 
 		<div class="form-group">
@@ -81,12 +71,12 @@
 
 		<source-graph has-changed="updateManufacturerList()" graph-info="source.suppliers"></source-graph>
 		
-		<div class="form-group" ng-show="manufacturer.length>0">
+	<!-- 	<div class="form-group" ng-show="manufacturer.length>0">
       <label class="col-xs-2 control-label" >News about suppliers:</label>
       <div class="col-xs-8">
-      	<ul><li ng-repeat="m in manufacturer" >{{m}}</li></ul>
+      	<ul><li ng-repeat="m in manufacturer" >{{m.uri}} : {{m.name}}</li></ul>
 			</div>
-    </div>
+    </div> -->
 
 
 		<target-graph graph-info="target"></target-graph>
